--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
-<title>Poster AR · Overlay + Vídeo + Texto + Audio + Progreso</title>
+<title>Poster AR · Overlay + Video + Text + Audio</title>
 <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  /* Cámara en cover, DETRÁS del canvas */
+  /* Cámara detrás del canvas */
   video[playsinline][autoplay]{
     position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
     object-fit:cover!important;z-index:0!important;background:#000!important
   }
-  /* Canvas WebGL SIEMPRE ENCIMA */
+  /* Canvas siempre encima */
   a-scene{position:fixed!important;inset:0!important;z-index:2!important}
   canvas.a-canvas{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:none}
+  /* UI */
   .dbg{position:fixed;right:8px;bottom:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
        padding:8px 10px;font:12px/1.4 system-ui,Segoe UI,Roboto;color:#cfe3ff;pointer-events:none;max-width:80vw}
   .ok{color:#7de0ca}.warn{color:#ffce7a}.err{color:#ff9a9a}
@@ -34,7 +35,7 @@
 
   <a-camera look-controls="enabled:false"></a-camera>
 
-  <!-- Anchors (no montamos contenido aún) -->
+  <!-- Anchors -->
   <a-entity id="a0" mindar-image-target="targetIndex:0"></a-entity>
   <a-entity id="a1" mindar-image-target="targetIndex:1"></a-entity>
   <a-entity id="a2" mindar-image-target="targetIndex:2"></a-entity>
@@ -61,18 +62,19 @@
   const overlayDebug = q.get('overlayDebug')==='1';
   const debugRects = q.get('debugRects')==='1';
   const dx = +(q.get('dx')||0), dy=+(q.get('dy')||0), sc=+(q.get('scale')||1), rot=+(q.get('rot')||0);
+  const eqVis = q.get('eq')==='1';
 
-  // Vídeo (1..3)
+  // Vídeos
   const vSlots=[1,2,3].map(i=>({id:i,v:q.get('v'+i),x:+q.get('x'+i)||0,y:+q.get('y'+i)||0,w:+q.get('vw'+i)||0,h:+q.get('vh'+i)||0}))
     .filter(s=>s.v&&s.w>0&&s.h>0);
 
-  // Textos (1..5)
+  // Textos como CANVAS (hasta 5)
   const tSlots=[1,2,3,4,5].map(i=>{
     const val=q.get('t'+i); if(!val) return null;
-    return {id:i,text:decodeURIComponent(val),x:+q.get('xt'+i)||0,y:+q.get('yt'+i)||0,w:+q.get('wt'+i)||0,h:+q.get('ht'+i)||0,align:(q.get('ta'+i)||'center'),color:'#'+(q.get('tc'+i)||'000000')};
+    return {id:i,text:val,x:+q.get('xt'+i)||0,y:+q.get('yt'+i)||0,w:+q.get('wt'+i)||0,h:+q.get('ht'+i)||0,align:(q.get('ta'+i)||'center'),color:'#'+(q.get('tc'+i)||'000000')};
   }).filter(Boolean);
 
-  // Audio + barra de progreso
+  // Audio + progreso
   const audioSrc=q.get('audio')||'';
   const pbx=+(q.get('pbx')||300), pby=+(q.get('pby')||2640), pbw=+(q.get('pbw')||2060), pbh=+(q.get('pbh')||14);
   const pbc='#'+(q.get('pbc')||'000000');
@@ -85,14 +87,12 @@
   scene.setAttribute('mindar-image',`imageTargetSrc:${t}; uiLoading: yes; autoStart: true; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.001;`);
   log('Cargado .mind desde URL','ok');
 
-  // ===== ASSETS ÚNICOS (no duplicar por anchor) =====
+  // ===== ASSETS únicos =====
   const assets = document.createElement('a-assets');
   assets.id='assets'; assets.setAttribute('timeout','60000'); scene.appendChild(assets);
 
-  // overlay img (única)
   if(d && !overlayDebug){
-    const img=document.createElement('img');
-    img.id='overlayImg'; img.crossOrigin='anonymous'; img.src=d; assets.appendChild(img);
+    const img=document.createElement('img'); img.id='overlayImg'; img.crossOrigin='anonymous'; img.src=d; assets.appendChild(img);
   }
 
   // videos únicos
@@ -105,7 +105,7 @@
   });
 
   // audio único
-  let audioEl=null, userApprovedAudio=false, targetVisible=false;
+  let audioEl=null, userApproved=false, targetVisible=false;
   if(audioSrc){
     audioEl=new Audio(audioSrc);
     audioEl.crossOrigin='anonymous';
@@ -114,32 +114,37 @@
     audioEl.volume=1.0;
   }
 
-  // ===== Helpers =====
+  // ===== Utilidades =====
   const pxToUnits=(x,y,w,h)=>({wn:w/pw,hn:h/pw,cx:-0.5+(x+w/2)/pw,cy:(ph/pw)/2-(y+h/2)/pw});
+
   const makeRoot=()=>{
     const root=document.createElement('a-entity');
     root.setAttribute('position', `${dx/pw} ${-dy/pw} 0`);
     root.setAttribute('scale', `${sc} ${sc} 1`);
     if(rot) root.setAttribute('rotation',`0 0 ${rot}`);
-    root.setAttribute('animation__pop','property:scale; from:'+(0.97*sc)+' '+(0.97*sc)+' 1; to:'+sc+' '+sc+' 1; dur:280; easing:easeOutQuad; startEvents:pop');
+    root.setAttribute('animation__pop','property:scale; from:'+(0.97*sc)+' '+(0.97*sc)+' 1; to:'+sc+' '+sc+' 1; dur:320; easing:easeOutQuad; startEvents:pop');
     return root;
   };
+
   const buildOverlay=()=>{
-    const p=document.createElement('a-plane');
-    p.setAttribute('width',1); p.setAttribute('height',H); p.setAttribute('position','0 0 0');
+    const p=document.createElement('a-plane'); p.setAttribute('width',1); p.setAttribute('height',H); p.setAttribute('position','0 0 0.0');
     if(!d||overlayDebug){
       p.setAttribute('material','shader:flat; color:#ff00aa; opacity:0.30; transparent:true; side:double;');
     }else{
-      p.setAttribute('material','shader:flat; src:#overlayImg; transparent:true; opacity:1; side:double;');
+      p.setAttribute('material','shader:flat; src:#overlayImg; transparent:true; opacity:0.0; side:double;');
+      p.setAttribute('animation__fade','property:material.opacity;from:0;to:1;dur:350;easing:easeOutQuad;startEvents:show');
     }
     return p;
   };
+
   const buildVideoPlane=(s)=>{
     const {wn,hn,cx,cy}=pxToUnits(s.x,s.y,s.w,s.h);
     const plane=document.createElement('a-plane');
     plane.setAttribute('width',wn); plane.setAttribute('height',hn);
-    plane.setAttribute('position',`${cx} ${cy} 0.05`);
+    plane.setAttribute('position',`${cx} ${cy} 0.03`);
     plane.setAttribute('material',`shader:flat; src:#v${s.id}; side:double;`);
+    plane.setAttribute('animation__pop','property:scale; from:0.96 0.96 1; to:1 1 1; dur:220; easing:easeOutQuad; startEvents:pop');
+
     function cover(){ const mesh=plane.getObject3D('mesh'); const v=videoEls[s.id];
       if(!mesh||!mesh.material||!mesh.material.map||!v||!v.videoWidth) return;
       const tex=mesh.material.map, vr=v.videoWidth/v.videoHeight, rr=s.w/s.h; let rx=1,ry=1,ox=0,oy=0;
@@ -147,33 +152,71 @@
       tex.offset.set(ox,oy); tex.repeat.set(rx,ry); tex.needsUpdate=true; mesh.material.needsUpdate=true;
     }
     plane.addEventListener('materialtextureloaded',cover);
-    // al cargar metadata de ese <video>, ajustar cover
     const v=videoEls[s.id]; if(v){ v.addEventListener('loadedmetadata',()=>{ v.play().catch(()=>{}); cover(); }, {once:true}); }
     if(debugRects){
       const wire=document.createElement('a-plane');
       wire.setAttribute('width',wn); wire.setAttribute('height',hn);
-      wire.setAttribute('position',`${cx} ${cy} 0.051`);
+      wire.setAttribute('position',`${cx} ${cy} 0.031`);
       wire.setAttribute('material','shader:flat; color:#00ffa0; wireframe:true; transparent:true; opacity:0.9; side:double;');
       plane.appendChild(wire);
     }
     return plane;
   };
-  const buildText=(s)=>{
-    const {wn,hn,cx,cy}=pxToUnits(s.x,s.y,s.w,s.h);
-    const e=document.createElement('a-entity');
-    e.setAttribute('text', `value:${s.text}; align:${s.align}; color:${s.color}; width:${wn}; wrapCount:36; baseline:center;`);
-    e.setAttribute('position', `${cx} ${cy} 0.12`); // SIEMPRE por encima
-    // truco: por si acaso el msdf hace depthTest, levantamos z y añadimos un plano transparente detrás
-    if(debugRects){
-      const wire=document.createElement('a-plane');
-      wire.setAttribute('width',wn); wire.setAttribute('height',hn);
-      wire.setAttribute('position',`0 0 -0.001`);
-      wire.setAttribute('material','shader:flat; color:#ffcc00; wireframe:true; transparent:true; opacity:0.9; side:double;');
-      e.appendChild(wire);
+
+  // === Textos como CANVAS → textura en a-plane (siempre visibles) ===
+  function drawTextToCanvas(text,color,align,wpx,hpx){
+    // 2x para nitidez
+    const scale=2, cw=Math.max(64, Math.min(2048, Math.round(wpx*scale))), ch=Math.max(32, Math.min(1024, Math.round(hpx*scale)));
+    const c=document.createElement('canvas'); c.width=cw; c.height=ch;
+    const ctx=c.getContext('2d');
+    ctx.clearRect(0,0,cw,ch);
+    // fondo transparente; sombra suave
+    ctx.fillStyle='rgba(0,0,0,0)'; ctx.fillRect(0,0,cw,ch);
+    ctx.shadowColor='rgba(0,0,0,0.35)'; ctx.shadowBlur= Math.floor(ch*0.06); ctx.shadowOffsetY= Math.floor(ch*0.03);
+    ctx.fillStyle=color;
+    // buscar tamaño de fuente máximo que encaje
+    const family='600 64px "Inter", system-ui, -apple-system, Segoe UI, Roboto';
+    let size=Math.floor(ch*0.72), min=12, max=Math.floor(ch*0.9);
+    const padX=Math.floor(cw*0.04);
+    while(min<=max){
+      const mid=Math.floor((min+max)/2);
+      ctx.font=family.replace('64px', mid+'px');
+      const m=ctx.measureText(text);
+      const fits = (m.width <= (cw-2*padX)) && (mid <= ch*0.9);
+      if(fits){ size=mid; min=mid+1; } else { max=mid-1; }
     }
-    return e;
-  };
-  const buildProgress=(x,y,w,h,pbc,pbf,pkn)=>{
+    ctx.font=family.replace('64px', size+'px');
+    ctx.textBaseline='middle';
+    ctx.textAlign = (align==='left'?'left':align==='right'?'right':'center');
+    let x = (align==='left')? padX : (align==='right')? (cw-padX) : (cw/2);
+    const y = ch/2;
+    ctx.fillText(text, x, y);
+    return c;
+  }
+
+  function buildTextPlane(s){
+    const {wn,hn,cx,cy}=pxToUnits(s.x,s.y,s.w,s.h);
+    const canvas = drawTextToCanvas(s.text, s.color, s.align, s.w, s.h);
+    canvas.id = 'tc'+s.id;
+    assets.appendChild(canvas);
+
+    const p=document.createElement('a-plane');
+    p.setAttribute('width',wn); p.setAttribute('height',hn);
+    p.setAttribute('position', `${cx} ${cy} 0.12`); // SIEMPRE por encima
+    p.setAttribute('material', `shader:flat; src:#${canvas.id}; transparent:true; side:double; opacity:0`);
+    p.setAttribute('animation__in','property:material.opacity; from:0; to:1; dur:280; easing:easeOutQuad; startEvents:show');
+    // pequeño slide-up
+    p.setAttribute('animation__slide','property:position; dir:alternate; dur:900; easing:easeInOutSine; loop:true; to:${cx} ${cy+0.003} 0.12');
+    if(debugRects){
+      const wire=document.createElement('a-plane'); wire.setAttribute('width',wn); wire.setAttribute('height',hn);
+      wire.setAttribute('position',`0 0 -0.001`); wire.setAttribute('material','shader:flat; color:#ffcc00; wireframe:true; transparent:true; opacity:0.8; side:double;');
+      p.appendChild(wire);
+    }
+    return p;
+  }
+
+  // Barra progreso
+  function buildProgress(x,y,w,h,pbc,pbf,pkn){
     const {wn,hn,cx,cy}=pxToUnits(x,y,w,h);
     const g=document.createElement('a-entity'); g.setAttribute('position',`${cx-wn/2} ${cy} 0.09`);
     const bg=document.createElement('a-plane'); bg.setAttribute('width',wn); bg.setAttribute('height',hn);
@@ -185,55 +228,94 @@
     const knob=document.createElement('a-circle'); knob.setAttribute('radius',hn*0.9/2);
     knob.setAttribute('material',`shader:flat; color:${pkn}; side:double`); knob.setAttribute('position',`0 0 0.002`);
     g.appendChild(bg); g.appendChild(fill); g.appendChild(knob);
-    return {group:g, set:(p)=>{ const c=Math.max(0,Math.min(1,p||0)); const wnow=wn*c; fill.setAttribute('width', wnow); fill.setAttribute('position',`${wnow/2} 0 0.001`); knob.setAttribute('position',`${wnow} 0 0.002`);} };
-  };
+    let smooth=0;
+    return {group:g, set:(p)=>{ const c=Math.max(0,Math.min(1,p||0)); smooth = smooth*0.85 + c*0.15; const wnow=wn*smooth; fill.setAttribute('width', wnow); fill.setAttribute('position',`${wnow/2} 0 0.001`); knob.setAttribute('position',`${wnow} 0 0.002`);} };
+  }
 
-  // ===== Construcción diferida: solo en el PRIMER anchor que detecte =====
-  let built=false, activeAnchor=null, progress=null;
+  // Ecualizador opcional (8 barras)
+  function buildEQ(x,y,w,h,color){
+    const {wn,hn,cx,cy}=pxToUnits(x,y,w,h);
+    const g=document.createElement('a-entity'); g.setAttribute('position',`${cx-wn/2} ${cy} 0.095`);
+    const bars=[]; const n=8; const gap=wn*0.02; const bw=(wn - gap*(n-1))/n;
+    for(let i=0;i<n;i++){
+      const p=document.createElement('a-plane');
+      p.setAttribute('width',bw); p.setAttribute('height',hn*0.1);
+      p.setAttribute('position',`${i*(bw+gap)+bw/2} 0 0`);
+      p.setAttribute('material',`shader:flat; color:${color}; transparent:true; opacity:0.9; side:double`);
+      bars.push(p); g.appendChild(p);
+    }
+    return {group:g, set:(arr)=>{ // arr [0..1]
+      for(let i=0;i<bars.length;i++){
+        const v = Math.max(0.05, Math.min(1, arr[i]||0));
+        const hnow = hn*(0.1 + 0.9*v);
+        bars[i].setAttribute('height', hnow);
+        bars[i].setAttribute('position', `${i*( (wn - (bw*bars.length)) / (bars.length-1) + bw) + bw/2} ${hnow/2 - hn*0.05} 0`);
+      }
+    }};
+  }
+
+  // ===== Construcción: sólo en el primer anchor que detecte =====
+  let built=false, progress=null, eq=null, audioCtx=null, analyser=null, freqData=null;
   const anchors=[...Array(8)].map((_,i)=>document.getElementById('a'+i)).filter(Boolean);
 
   function buildInto(anchor){
-    if(built) return;
-    built=true; activeAnchor=anchor;
+    if(built) return; built=true;
 
-    const root=makeRoot(); anchor.appendChild(root);
+    const root=document.createElement('a-entity');
+    root.setAttribute('position', `${dx/pw} ${-dy/pw} 0`);
+    root.setAttribute('scale', `${sc} ${sc} 1`);
+    if(rot) root.setAttribute('rotation',`0 0 ${rot}`);
+    anchor.appendChild(root);
+    root.emit('pop',null,false);
 
-    // overlay
     const overlay=buildOverlay(); root.appendChild(overlay);
+    if(d && !overlayDebug) overlay.emit('show',null,false);
 
-    // vídeos (planos referenciando los <video> únicos)
-    vSlots.forEach(s=> root.appendChild( buildVideoPlane(s) ));
+    vSlots.forEach(s=>{ const plane=buildVideoPlane(s); root.appendChild(plane); plane.emit('pop',null,false); });
 
-    // textos
-    tSlots.forEach(s=> root.appendChild( buildText(s) ));
+    tSlots.forEach(s=>{ const tp=buildTextPlane(s); root.appendChild(tp); tp.emit('show',null,false); });
 
-    // progreso de audio (si hay audio)
     if(audioEl){
-      const pbx=+(q.get('pbx')||300), pby=+(q.get('pby')||2640), pbw=+(q.get('pbw')||2060), pbh=+(q.get('pbh')||14);
-      progress=buildProgress(pbx,pby,pbw,pbh,pbc,pbf,pkn); root.appendChild(progress.group);
+      progress = buildProgress(pbx,pby,pbw,pbh,pbc,pbf,pkn); root.appendChild(progress.group);
+      if(eqVis){
+        eq = buildEQ(pbx, pby + pbh*5, pbw, pbh*10, pbf); // encima de la barra
+        root.appendChild(eq.group);
+      }
     }
   }
 
-  // Gestión de audio: solo suena con target visible y permiso previo
+  function setupEQ(){
+    if(!audioEl || audioCtx) return;
+    try{
+      audioCtx = new (window.AudioContext||window.webkitAudioContext)();
+      const src = audioCtx.createMediaElementSource(audioEl);
+      analyser = audioCtx.createAnalyser();
+      analyser.fftSize = 256;
+      src.connect(analyser); analyser.connect(audioCtx.destination);
+      freqData = new Uint8Array(analyser.frequencyBinCount);
+    }catch(e){ log('EQ no disponible', 'warn'); }
+  }
+
+  // Audio: sólo cuando hay target + permiso
+  let targetVisible=false;
   function tryStartAudio(){
     if(!audioEl) return;
-    if(targetVisible && userApprovedAudio){
+    if(targetVisible && userApproved){
       audioEl.play().catch(()=>{});
       btnSound.hidden=true;
+      if(audioCtx && audioCtx.state==='suspended') audioCtx.resume().catch(()=>{});
     }else{
       audioEl.pause();
-      if(targetVisible && !userApprovedAudio) btnSound.hidden=false;
+      if(targetVisible && !userApproved) btnSound.hidden=false;
     }
   }
-  btnSound.onclick=()=>{ userApprovedAudio=true; tryStartAudio(); };
+  btnSound.onclick=()=>{ userApproved=true; setupEQ(); tryStartAudio(); };
 
   anchors.forEach((a,i)=>{
     a.addEventListener('targetFound', ()=>{
       targetVisible=true;
       if(!built) buildInto(a);
-      // play vídeos
       Object.values(videoEls).forEach(v=>v && v.play && v.play().catch(()=>{}));
-      // audio control
       tryStartAudio();
       log('TARGET FOUND idx '+i,'ok');
     });
@@ -241,12 +323,12 @@
       targetVisible=false;
       Object.values(videoEls).forEach(v=>v && v.pause && v.pause());
       if(audioEl) audioEl.pause();
-      if(audioEl && userApprovedAudio) btnSound.hidden=false; // deja botón visible por si reescanea
+      if(audioEl && userApproved) btnSound.hidden=false;
       log('Perdido idx '+i,'warn');
     });
   });
 
-  // Z-index cámara OK
+  // z-index cámara OK
   const mo=new MutationObserver(()=>{
     document.querySelectorAll('video[playsinline][autoplay]').forEach(v=>{
       v.style.objectFit='cover'; v.style.width='100vw'; v.style.height='100vh';
@@ -256,10 +338,18 @@
   });
   mo.observe(document.documentElement,{subtree:true,childList:true});
 
-  // Progreso animado (si hay audio)
+  // Loop de progreso + (opcional) ecualizador
   function tick(){
     if(audioEl && progress && audioEl.duration>0){
       progress.set(audioEl.currentTime / audioEl.duration);
+    }
+    if(analyser && eq){
+      analyser.getByteFrequencyData(freqData);
+      const bands=8, step=Math.floor(freqData.length/bands);
+      const arr=new Array(bands).fill(0).map((_,i)=>{
+        let s=0; for(let j=0;j<step;j++) s+=freqData[i*step+j]; s/=step; return s/255;
+      });
+      eq.set(arr);
     }
     requestAnimationFrame(tick);
   }
@@ -268,12 +358,10 @@
   scene.addEventListener('arReady', ()=>log('Cámara OK','ok'));
   scene.addEventListener('arError', ()=>log('Error de cámara / permisos','err'));
 
-  // Primer toque: habilitar reproducción si el navegador lo exige
+  // Primer toque: habilitar vídeos si el navegador lo exige
   window.addEventListener('touchend', ()=>{
     Object.values(videoEls).forEach(v=>v && v.play && v.play().catch(()=>{}));
-    if(!userApprovedAudio && audioEl){ /* espera al botón */ }
   }, {once:true,passive:true});
-
 })();
 </script>
 </body>
