--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
 <style>
   html,body{margin:0;height:100%;background:#000}
-  video[playsinline][autoplay]{position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;object-fit:cover!important;z-index:0!important;background:#000!important}
+  /* Cámara detrás del canvas */
+  video[playsinline]{
+    position:fixed!important;inset:0!important;width:100vw!important;height:100vh!important;
+    object-fit:cover!important;z-index:0!important;background:#000!important
+  }
+  /* Canvas WebGL delante de la cámara */
   a-scene{position:fixed!important;inset:0!important;z-index:2!important}
   canvas.a-canvas{position:fixed!important;inset:0!important;z-index:3!important;pointer-events:none}
-  .dbg{position:fixed;right:8px;bottom:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;padding:8px 10px;font:12px/1.4 system-ui,Segoe UI,Roboto;color:#cfe3ff;pointer-events:none;max-width:80vw}
+  /* UI */
+  .dbg{position:fixed;right:8px;bottom:8px;background:#0f1522cc;border:1px solid #22324d;border-radius:8px;
+       padding:8px 10px;font:12px/1.4 system-ui,Segoe UI,Roboto;color:#cfe3ff;pointer-events:none;max-width:80vw}
   .ok{color:#7de0ca}.warn{color:#ffce7a}.err{color:#ff9a9a}
-  .sound{position:fixed;left:12px;bottom:12px;z-index:5;background:#111a;border:1px solid #2a3a58;color:#eaf2ff;padding:10px 12px;border-radius:12px;font:14px/1.2 system-ui}
+  .sound{position:fixed;left:12px;bottom:12px;z-index:5;background:#111a;border:1px solid #2a3a58;
+         color:#eaf2ff;padding:10px 12px;border-radius:12px;font:14px/1.2 system-ui}
   .sound[hidden]{display:none}
   #canvases{position:fixed;left:-9999px;top:-9999px;visibility:hidden}
 </style>
@@ -28,7 +36,7 @@
 
   <a-camera look-controls="enabled:false"></a-camera>
 
-  <!-- Anchors -->
+  <!-- Anchors (solo montamos en el primero que detecte) -->
   <a-entity id="a0" mindar-image-target="targetIndex:0"></a-entity>
   <a-entity id="a1" mindar-image-target="targetIndex:1"></a-entity>
   <a-entity id="a2" mindar-image-target="targetIndex:2"></a-entity>
@@ -47,7 +55,7 @@
 (function(){
   const dbg = document.getElementById('dbg'), btnSound = document.getElementById('btnSound');
   const log = (m,cls='')=>{ dbg.innerHTML=(cls?`<span class="${cls}">${m}</span>`:m)+'<br>'+dbg.innerHTML; console.log('[AR]',m); };
-  window.onerror = (msg, src, line, col, err)=>{ log('JS ERROR: '+msg+' @'+(src||'')+':'+line+':'+col,'err'); };
+  window.onerror = (msg, src, line, col)=>{ log('JS ERROR: '+msg+' @'+(src||'')+':'+line+':'+col,'err'); };
 
   const q = new URLSearchParams(location.search);
   const t  = q.get('t') || '';
@@ -58,14 +66,17 @@
   const dx = +(q.get('dx')||0), dy=+(q.get('dy')||0), sc=+(q.get('scale')||1), rot=+(q.get('rot')||0);
   const eqVis = q.get('eq')==='1';
 
+  // slots de vídeo
   const vSlots=[1,2,3].map(i=>({id:i,v:q.get('v'+i),x:+q.get('x'+i)||0,y:+q.get('y'+i)||0,w:+q.get('vw'+i)||0,h:+q.get('vh'+i)||0}))
     .filter(s=>s.v&&s.w>0&&s.h>0);
 
+  // textos (canvas)
   const tSlots=[1,2,3,4,5].map(i=>{
     const val=q.get('t'+i); if(!val) return null;
     return {id:i,text:val,x:+q.get('xt'+i)||0,y:+q.get('yt'+i)||0,w:+q.get('wt'+i)||0,h:+q.get('ht'+i)||0,align:(q.get('ta'+i)||'center'),color:'#'+(q.get('tc'+i)||'000000')};
   }).filter(Boolean);
 
+  // audio y barra
   const audioSrc=q.get('audio')||'';
   const pbx=+(q.get('pbx')||300), pby=+(q.get('pby')||2640), pbw=+(q.get('pbw')||2060), pbh=+(q.get('pbh')||14);
   const pbc='#'+(q.get('pbc')||'000000'), pbf='#'+(q.get('pbf')||'13d77a'), pkn='#'+(q.get('pkn')||'000000');
@@ -73,10 +84,11 @@
   if(!t){ log('❗ Falta ?t=<URL .mind>','err'); return; }
 
   const scene=document.getElementById('scene');
-  // ⚠️ Espacio tras imageTargetSrc:
   scene.setAttribute('mindar-image', `imageTargetSrc: ${t}; uiLoading: yes; autoStart: true; maxTrack:1; warmupTolerance:2; filterMinCF:0.0001; filterBeta:0.001;`);
+  scene.addEventListener('loaded', ()=>{ try{ scene.renderer.setClearColor(0x000000,0); }catch(e){} });
   log('Cargado .mind desde URL','ok');
 
+  // assets
   const assets = document.createElement('a-assets');
   assets.id='assets'; assets.setAttribute('timeout','60000'); scene.appendChild(assets);
   if(d && !overlayDebug){
@@ -89,6 +101,7 @@
     v.muted=true; v.loop=true; v.preload='auto'; v.crossOrigin='anonymous'; v.src=s.v;
     assets.appendChild(v); videoEls[s.id]=v;
   });
+
   let audioEl=null, userApproved=false, targetVisible=false;
   if(audioSrc){ audioEl=new Audio(audioSrc); audioEl.crossOrigin='anonymous'; audioEl.preload='auto'; audioEl.loop=false; audioEl.volume=1.0; }
 
@@ -106,9 +119,9 @@
   const buildOverlay=()=>{
     const p=document.createElement('a-plane'); p.setAttribute('width',1); p.setAttribute('height',H); p.setAttribute('position','0 0 0.0');
     if(!d||overlayDebug){
-      p.setAttribute('material','shader:flat; color:#ff00aa; opacity:0.30; transparent:true; side:double;');
+      p.setAttribute('material','shader:flat; color:#00ffaa; opacity:0.25; transparent:true; side:double;');
     }else{
-      p.setAttribute('material','shader:flat; src:#overlayImg; transparent:true; opacity:0.0; side:double;');
+      p.setAttribute('material','shader:flat; src:#overlayImg; transparent:true; opacity:0; side:double;');
       p.setAttribute('animation__fade','property:material.opacity;from:0;to:1;dur:350;easing:easeOutQuad;startEvents:show');
     }
     return p;
@@ -139,42 +152,42 @@
     return plane;
   };
 
-  // --- Textos como canvas→textura (fuera de <a-assets>) ---
-  function drawTextToCanvas(text,color,align,wpx,hpx){
+  // ---- TEXTOS: canvas -> THREE.CanvasTexture (100% visible) ----
+  function drawTextCanvas(text,color,align,wpx,hpx){
     const scale=2, cw=Math.max(64, Math.min(2048, Math.round(wpx*scale))), ch=Math.max(32, Math.min(1024, Math.round(hpx*scale)));
     const c=document.createElement('canvas'); c.width=cw; c.height=ch;
-    const ctx=c.getContext('2d');
-    ctx.clearRect(0,0,cw,ch);
+    const ctx=c.getContext('2d'); ctx.clearRect(0,0,cw,ch);
     ctx.shadowColor='rgba(0,0,0,0.35)'; ctx.shadowBlur=Math.floor(ch*0.06); ctx.shadowOffsetY=Math.floor(ch*0.03);
     ctx.fillStyle=color;
     const family='600 64px "Inter", system-ui, -apple-system, Segoe UI, Roboto';
-    let size=Math.floor(ch*0.72), min=12, max=Math.floor(ch*0.9);
-    const padX=Math.floor(cw*0.04);
-    while(min<=max){
-      const mid=(min+max>>1);
-      ctx.font=family.replace('64px', mid+'px');
-      const m=ctx.measureText(text);
-      if(m.width <= (cw-2*padX) && mid <= ch*0.9){ size=mid; min=mid+1; } else { max=mid-1; }
-    }
-    ctx.font=family.replace('64px', size+'px');
-    ctx.textBaseline='middle';
+    let size=Math.floor(ch*0.72), min=12, max=Math.floor(ch*0.9), padX=Math.floor(cw*0.04);
+    while(min<=max){ const mid=(min+max>>1); ctx.font=family.replace('64px', mid+'px'); const m=ctx.measureText(text);
+      if(m.width <= (cw-2*padX) && mid <= ch*0.9){ size=mid; min=mid+1; } else { max=mid-1; } }
+    ctx.font=family.replace('64px', size+'px'); ctx.textBaseline='middle';
     ctx.textAlign = (align==='left'?'left':align==='right'?'right':'center');
-    const x = (align==='left')? padX : (align==='right')? (cw-padX) : (cw/2);
-    const y = ch/2;
-    ctx.fillText(text, x, y);
-    return c;
+    const x = (align==='left')? padX : (align==='right')? (cw-padX) : (cw/2); const y=ch/2;
+    ctx.fillText(text, x, y); return c;
   }
   function buildTextPlane(s){
     const {wn,hn,cx,cy}=pxToUnits(s.x,s.y,s.w,s.h);
-    const canvas = drawTextToCanvas(s.text, s.color, s.align, s.w, s.h);
-    canvas.id = 'tc'+s.id;
-    document.getElementById('canvases').appendChild(canvas); // 👈 fuera de a-assets
-
+    const canvas = drawTextCanvas(s.text, s.color, s.align, s.w, s.h);
     const p=document.createElement('a-plane');
     p.setAttribute('width',wn); p.setAttribute('height',hn);
-    p.setAttribute('position', `${cx} ${cy} 0.12`); // por encima de todo
-    p.setAttribute('material', `shader:flat; src:#${canvas.id}; transparent:true; side:double; depthTest:false; opacity:0`);
+    p.setAttribute('position', `${cx} ${cy} 0.12`); // por encima
+    p.setAttribute('material', `shader:flat; transparent:true; side:double; depthTest:false; opacity:0`);
     p.setAttribute('animation__in','property:material.opacity; from:0; to:1; dur:280; easing:easeOutQuad; startEvents:show');
+    p.setAttribute('animation__slide','property:position; to:'+cx+' '+(cy+0.003)+' 0.12; dir:alternate; loop:true; dur:900; easing:easeInOutSine');
+    // asignar textura de canvas con THREE
+    p.addEventListener('loaded', ()=>{
+      try{
+        const mesh=p.getObject3D('mesh');
+        const tex=new THREE.CanvasTexture(canvas);
+        tex.needsUpdate=true;
+        mesh.material.map=tex;
+        mesh.material.transparent=true;
+        mesh.material.needsUpdate=true;
+      }catch(e){ log('Text texture err '+e,'err'); }
+    });
     if(debugRects){
       const wire=document.createElement('a-plane'); wire.setAttribute('width',wn); wire.setAttribute('height',hn);
       wire.setAttribute('position',`0 0 -0.001`); wire.setAttribute('material','shader:flat; color:#ffcc00; wireframe:true; transparent:true; opacity:0.8; side:double;');
@@ -199,21 +212,17 @@
     return {group:g, set:(p)=>{ const c=Math.max(0,Math.min(1,p||0)); smooth = smooth*0.85 + c*0.15; const wnow=wn*smooth; fill.setAttribute('width', wnow); fill.setAttribute('position',`${wnow/2} 0 0.001`); knob.setAttribute('position',`${wnow} 0 0.002`);} };
   }
 
-  // ===== Build en primer anchor detectado =====
+  // ===== construir en el primer anchor detectado =====
   let built=false, progress=null;
   const anchors=[...Array(8)].map((_,i)=>document.getElementById('a'+i)).filter(Boolean);
 
   function buildInto(anchor){
     if(built) return; built=true;
     const root=makeRoot(); anchor.appendChild(root); root.emit('pop',null,false);
-
     const overlay=buildOverlay(); root.appendChild(overlay); if(d && !overlayDebug) overlay.emit('show',null,false);
     vSlots.forEach(s=>{ const plane=buildVideoPlane(s); root.appendChild(plane); plane.emit('pop',null,false); });
-    tSlots.forEach(s=>{ const tp=buildTextPlane(s); root.appendChild(tp); tp.emit('in',null,false); tp.emit('show',null,false); });
-
-    if(audioEl){
-      progress = buildProgress(pbx,pby,pbw,pbh,pbc,pbf,pkn); root.appendChild(progress.group);
-    }
+    tSlots.forEach(s=>{ const tp=buildTextPlane(s); root.appendChild(tp); tp.emit('show',null,false); });
+    if(audioEl){ progress = buildProgress(pbx,pby,pbw,pbh,pbc,pbf,pkn); root.appendChild(progress.group); }
   }
 
   function tryStartAudio(){
@@ -240,17 +249,19 @@
     });
   });
 
-  // z-index cámara OK
+  // Asegurar cámara en cover y canvas delante
   const mo=new MutationObserver(()=>{
-    document.querySelectorAll('video[playsinline][autoplay]').forEach(v=>{
-      v.style.objectFit='cover'; v.style.width='100vw'; v.style.height='100vh';
-      v.style.position='fixed'; v.style.inset='0'; v.style.zIndex='0'; v.style.background='#000';
+    document.querySelectorAll('video').forEach(v=>{
+      if(v.srcObject instanceof MediaStream){
+        v.style.objectFit='cover'; v.style.width='100vw'; v.style.height='100vh';
+        v.style.position='fixed'; v.style.inset='0'; v.style.zIndex='0'; v.style.background='#000';
+      }
     });
     const canvas=document.querySelector('canvas.a-canvas'); if(canvas){ canvas.style.zIndex='3'; canvas.style.position='fixed'; canvas.style.inset='0'; }
   });
   mo.observe(document.documentElement,{subtree:true,childList:true});
 
-  // progreso de audio
+  // progreso audio
   function tick(){ if(audioEl && progress && audioEl.duration>0){ progress.set(audioEl.currentTime / audioEl.duration); } requestAnimationFrame(tick); }
   requestAnimationFrame(tick);
 
